--- a/Assets/Code/IaC/app-service.json
+++ b/Assets/Code/IaC/app-service.json
@@ -4,8 +4,8 @@
     "parameters": {
         "appService": {
             "defaultValue": {
-                "appServicePlan": "",
-                "name": "plan-api-platform-security"
+                "appServicePlan": "plan-api-platform-security",
+                "name": "app-api-platform-security"
             },
             "type": "object"
         },
