--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-Assets/.vscode/settings.json
+assets/.vscode/settings.json
 .vscode/settings.json
