--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 
 assets/.vscode/settings.json
 .vscode/settings.json
+/assets/code/asset-management/AssetManagement/App.config
